Released: Unreleased

== Features ==
 * Fixed issue #2152: Log window show whole commit in "View patch"
 * Fixed issue #2149: Can't search message in annotated tag or text in notes
 * Fixed issue #2172: Support num parameters of git blame -M and git blame -C
 * Fixed issue #2179: Revision comparisons against HEAD should not generate temporary files (allow to compare to working tree)

== Bug Fixes ==
 * Fixed issue #2158: TortoiseGit sometimes crashes when doing Sync > Pull
 * Fixed issue #2159: URL combo box in Submodule Add is not case sensitive
 * Fixed issue #2171: blame setting 'detect moved or copied line' does not work for the case 'from modified files'
 * Fixed issue #2174: Submodule update shows wrong submodule list
 * Fixed issue #2175: TortoiseGitBlame fails to search if line has non-ascii chars and system locale is not US
 * Fixed issue #2141: libgit2 still added the file with mixing EOL, while autocrlf and safecrlf are true

= Release 1.8.8.0 =
Released: 2014-04-01

== Features ==
 * Fixed issue #2065: Add link to fetch to screen when push failed
 * Fixed issue #1855: Support negative log filter syntax
 * Fixed issue #1029: Add function to control the TGitCache module
 * Fixed issue #2086: Rebase autoskip patches that are already in upstream
 * Fixed issue #2112: Disable option for Drag & Drop Handler
 * Fixed issue #2114: Allow to swap rebase refs
 * Updated libgit to version 1.9.0
 * Fixed issue #1920: Diff in log dialog like in commit dialog
 * Fixed issue #2134: Easier to select lines to partial commit in TortoiseGitMerge
 * Fixed issue #2135: Add menu button to open Explorer when clone finishes

== Bug Fixes ==
 * Fixed issue #2067: Normalize email with capital letters when calculating gravatar hash
 * Fixed issue #2071: TGitCache blocks Windows to eject USB drive
 * Fixed issue #2074: Time field not large enough
 * Fixed issue #1648: Issue with handles being kept when there are uncommitted changes