@@ -1624,7 +1624,7 @@ BEGIN
     LTEXT           "",IDC_PROG_LABEL,13,47,367,8
 END
 
-IDD_CLEAN DIALOGEX 0, 0, 261, 150
+IDD_CLEAN DIALOGEX 0, 0, 261, 160
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Clean"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
@@ -1639,10 +1639,11 @@ BEGIN
     CONTROL         "Remove untracked directories (-d)",IDC_CHECK_DIR,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,68,232,10
     CONTROL         "Do not use recycle bin",IDC_CHECK_NORECYCLEBIN,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,81,232,10
     CONTROL         "Dry run",IDC_CHECK_DRYRUN,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,95,116,10
-    DEFPUSHBUTTON   "OK",IDOK,81,128,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,142,128,50,14
-    PUSHBUTTON      "Help",IDHELP,204,128,50,14
-    LTEXT           "Attention: This command affects the whole working tree!",IDC_STATIC,14,114,233,10
+    CONTROL         "Submodules",IDC_CHECKSUBMODULES,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,109,40,10
+    DEFPUSHBUTTON   "OK",IDOK,81,142,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,142,142,50,14
+    PUSHBUTTON      "Help",IDHELP,204,142,50,14
+    LTEXT           "Attention: This command affects the whole working tree!",IDC_STATIC,14,128,233,10
 END
 
 IDD_PATCH_VIEW DIALOGEX 0, 0, 248, 195
@@ -2680,7 +2681,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 254
         TOPMARGIN, 7
-        BOTTOMMARGIN, 142
+        BOTTOMMARGIN, 152
     END
 
     IDD_PATCH_VIEW, DIALOG
