@@ -1,6 +1,6 @@
 // TortoiseGit - a Windows shell extension for easy version control
 
-// Copyright (C) 2009,2011-2013 - TortoiseGit
+// Copyright (C) 2009,2011-2014 - TortoiseGit
 // Copyright (C) 2007-2008 - TortoiseSVN
 
 // This program is free software; you can redistribute it and/or
@@ -47,6 +47,66 @@ static CString UnescapeQuotePath(CString s)
 	return CUnicodeUtils::GetUnicode(t);
 }
 
+struct SubmodulePayload
+{
+	STRING_VECTOR &list;
+	CString basePath;
+	STRING_VECTOR prefixList;
+};
+
+static bool GetSubmodulePathList(SubmodulePayload &payload);
+
+static int SubmoduleCallback(git_submodule *sm, const char * /*name*/, void *payload)
+{
+	auto spayload = (SubmodulePayload *)payload;
+	CString path = CUnicodeUtils::GetUnicode(git_submodule_path(sm));
+	if (spayload->prefixList.empty())
+	{
+		CTGitPath subPath(spayload->basePath);
+		subPath.AppendPathString(path);
+		spayload->list.push_back(subPath.GetGitPathString());
+		SubmodulePayload tpayload = { spayload->list, subPath.GetGitPathString() };
+		GetSubmodulePathList(tpayload);
+	}
+	else
+	{
+		for (size_t i = 0; i < spayload->prefixList.size(); ++i)
+		{
+			CString prefix = spayload->prefixList.at(i) + _T("/");
+			if (path.Left(prefix.GetLength()) == prefix)
+			{
+				CTGitPath subPath(spayload->basePath);
+				subPath.AppendPathString(path);
+				spayload->list.push_back(subPath.GetGitPathString());
+				SubmodulePayload tpayload = { spayload->list, subPath.GetGitPathString() };
+				GetSubmodulePathList(tpayload);
+			}
+		}
+	}
+	return 0;
+}
+
+static bool GetSubmodulePathList(SubmodulePayload &payload)
+{
+	git_repository *repo;
+	if (git_repository_open(&repo, CUnicodeUtils::GetUTF8(CTGitPath(payload.basePath).GetGitPathString())))
+	{
+		// Silence the warning message, submodule may not be initialized yet.
+		// MessageBox(NULL, CGit::GetLibGit2LastErr(_T("Could not open repository.")), _T("TortoiseGit"), MB_ICONERROR);
+		return false;
+	}
+
+	if (git_submodule_foreach(repo, SubmoduleCallback, &payload))
+	{
+		git_repository_free(repo);
+		MessageBox(NULL, CGit::GetLibGit2LastErr(_T("Could not get submodule list.")), _T("TortoiseGit"), MB_ICONERROR);
+		return false;
+	}
+
+	git_repository_free(repo);
+	return true;
+}
+
 bool CleanupCommand::Execute()
 {
 	bool bRet = false;
@@ -75,6 +135,27 @@ bool CleanupCommand::Execute()
 			break;
 		}
 
+		STRING_VECTOR submoduleList;
+		SubmodulePayload payload = { submoduleList };
+		if (dlg.m_bSubmodules)
+		{
+			payload.basePath = g_Git.m_CurrentDir;
+			if (pathList.GetCount() != 1 || pathList.GetCount() == 1 && !pathList[0].IsEmpty())
+			{
+				for (int i = 0; i < pathList.GetCount(); ++i)
+				{
+					CString path;
+					if (pathList[i].IsDirectory())
+						payload.prefixList.push_back(pathList[i].GetGitPathString());
+					else
+						payload.prefixList.push_back(pathList[i].GetContainingDirectory().GetGitPathString());
+				}
+			}
+			if (!GetSubmodulePathList(payload))
+				return FALSE;
+			std::sort(submoduleList.begin(), submoduleList.end());
+		}
+
 		if (dlg.m_bDryRun || dlg.m_bNoRecycleBin)
 		{
 			CProgressDlg progress;
@@ -86,8 +167,19 @@ bool CleanupCommand::Execute()
 				else
 					path = pathList[i].GetContainingDirectory().GetGitPathString();
 
+				progress.m_GitDirList.push_back(g_Git.m_CurrentDir);
 				progress.m_GitCmdList.push_back(cmd + _T(" \"") + path + _T("\""));
 			}
+
+			if (dlg.m_bSubmodules)
+			{
+				for (CString dir : submoduleList)
+				{
+					progress.m_GitDirList.push_back(CTGitPath(dir).GetWinPathString());
+					progress.m_GitCmdList.push_back(cmd);
+				}
+			}
+
 			if (progress.DoModal()==IDOK)
 				return TRUE;
 		}
@@ -101,40 +193,56 @@ bool CleanupCommand::Execute()
 			sysProgressDlg.SetShowProgressBar(false);
 			sysProgressDlg.ShowModeless((HWND)NULL, true);
 
-			CString cmdout, cmdouterr;
-			if (g_Git.Run(cmd, &cmdout, &cmdouterr, CP_UTF8)) {
-				MessageBox(NULL, cmdouterr, _T("TortoiseGit"), MB_ICONERROR);
-				return FALSE;
-			}
-
-			if (sysProgressDlg.HasUserCancelled())
-			{
-				CMessageBox::Show(NULL, IDS_SVN_USERCANCELLED, IDS_APPNAME, MB_OK);
-				return FALSE;
-			}
-
-			int pos = 0;
-			CString token = cmdout.Tokenize(_T("\n"), pos);
 			CTGitPathList delList;
-			while (!token.IsEmpty())
+			for (size_t i = 0; i <= submoduleList.size(); ++i)
 			{
-				if (token.Mid(0, 13) == _T("Would remove "))
+				CGit git;
+				CGit *pGit;
+				if (i == 0)
+					pGit = &g_Git;
+				else
 				{
-					CString tempPath = token.Mid(13).TrimRight();
-					if (quotepath)
-					{
-						tempPath = UnescapeQuotePath(tempPath.Trim(_T('"')));
-					}
-					delList.AddPath(CTGitPath(tempPath));
+					git.m_CurrentDir = submoduleList[i - 1];
+					pGit = &git;
+				}
+				CString cmdout, cmdouterr;
+				if (pGit->Run(cmd, &cmdout, &cmdouterr, CP_UTF8))
+				{
+					MessageBox(NULL, cmdouterr, _T("TortoiseGit"), MB_ICONERROR);
+					return FALSE;
 				}
 
-				token = cmdout.Tokenize(_T("\n"), pos);
-			}
+				if (sysProgressDlg.HasUserCancelled())
+				{
+					CMessageBox::Show(NULL, IDS_SVN_USERCANCELLED, IDS_APPNAME, MB_OK);
+					return FALSE;
+				}
 
-			if (sysProgressDlg.HasUserCancelled())
-			{
-				CMessageBox::Show(NULL, IDS_SVN_USERCANCELLED, IDS_APPNAME, MB_OK);
-				return FALSE;
+				int pos = 0;
+				CString token = cmdout.Tokenize(_T("\n"), pos);
+				while (!token.IsEmpty())
+				{
+					if (token.Mid(0, 13) == _T("Would remove "))
+					{
+						CString tempPath = token.Mid(13).TrimRight();
+						if (quotepath)
+						{
+							tempPath = UnescapeQuotePath(tempPath.Trim(_T('"')));
+						}
+						if (i == 0)
+							delList.AddPath(CTGitPath(tempPath));
+						else
+							delList.AddPath(CTGitPath(submoduleList[i - 1] + "/" + tempPath));
+					}
+
+					token = cmdout.Tokenize(_T("\n"), pos);
+				}
+
+				if (sysProgressDlg.HasUserCancelled())
+				{
+					CMessageBox::Show(NULL, IDS_SVN_USERCANCELLED, IDS_APPNAME, MB_OK);
+					return FALSE;
+				}
 			}
 
 			delList.DeleteAllFiles(true, false);
